
[project]
requires-python = ">= 3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pylangparser"
version = "0.1.0"
description = ""
authors = ["Brad Holland"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
